# Sensory-Composer

./: .gitignore  DEPLOYMENT.md  Makefile  README.md  render.yaml  vercel.json
backend/: .env.example  Dockerfile  composer.json
backend/app/Http/Controllers/: AnalysisController.php  ScoreController.php
backend/app/Models/: Score.php
backend/config/: cors.php  services.php
backend/database/migrations/: 2024_01_01_000001_create_scores_table.php  supabase_init.sql
backend/resources/views/admin/: dashboard.blade.php
backend/routes/: api.php  web.php
backend/services/fastapi/: main.py  requirements.txt
backend/services/fastapi/models/: schemas.py
backend/services/fastapi/routers/: analysis.py
backend/services/rust-dsp/: Cargo.toml
backend/services/rust-dsp/src/: fft.rs  main.rs
couchdb/: Dockerfile
data-sync/: indexeddb-helpers.js  pouchdb-config.js  sqljs-export.js
docs/: ARCHITECTURE.mmd  FLOW.mmd
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/audio-studio/: page.tsx
frontend/src/app/poetry-editor/: page.tsx
frontend/src/app/score-export/: page.tsx
frontend/src/components/: P5Sketch.tsx  PoetryEditor.tsx  ScoreExporter.tsx
frontend/src/lib/: api.ts  indexeddb.ts  pouchdb.ts
frontend/src/styles/: globals.css
notebooks/: audio_analysis.ipynb  voila_app.ipynb
