[package]
name = "rust-dsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-dsp"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
